--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Sam's Portfolio</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <a href="https://github.com/SamLeatherdale"><h1>View my GitHub projects</h1></a>
 </body>
 </html>
