--- a/index.html
+++ b/index.html
@@ -1,9 +1,104 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Sam's Portfolio</title>
-</head>
-<body>
-    <h1>Hello world!</h1>
-</body>
+<meta charset="utf-8">
+    <!--Compiled on 03/09/2017 11:11:09AM +02:00 CEST-->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="author" content="Sam Leatherdale" />
+<title>Sam Leatherdale</title>
+
+<!--Iconography-->
+<link rel="shortcut icon" href="/icon/favicon.ico">
+
+<!--Site Verification-->
+
+<!--Google Analytics-->
+
+<!--Hosted Resources-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+
+<!--Local Resources-->
+<link rel="stylesheet" type="text/css" href="//css/style.css?v=1504429869.7903" /><body>
+    <header id="page_header">
+    <div class="header-title">
+        <a class="inherit-link" href="/"><h1 id="title">Sam Leatherdale</h1></a>
+        <h2 id="subtitle">Programmer and Web Developer</h2>
+    </div>
+
+    <nav id="header_nav">
+        <ul>
+        <li role="presentation" class="active"><a class="inherit-link" href="/index.html">Home</a></li><li role="presentation" class=""><a class="inherit-link" href="/about.html">About Me</a></li>        </ul>
+    </nav>
+</header>
+    
+    <main>
+        <div id="content" class="wrap">
+            <h2>GitHub Projects</h2>
+            <p>The following projects are hosted right here on GitHub.</p>
+                    <div class="project">
+                <div class="project-content clearfix">
+                    <a class="project-main inherit-link clearfix" href="/youtubetimeline">
+                        <div class="project-icon" style="background-image: url('/icons/youtubetimeline.png');"></div>
+                        <div class="project-text">
+                            <h3 class="project-title">YouTube Timeline</h3>
+                            <p class="project-description">See the entire history of any YouTube channel without scrolling forever.</p>
+                        </div>
+                    </a>
+                    <a class="project-source" href="https://github.com/samleatherdale//youtubetimeline" target="_blank">
+                        <div class="vtable">
+                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+                    <div class="project">
+                <div class="project-content clearfix">
+                    <a class="project-main inherit-link clearfix" href="/discordtextgenerator">
+                        <div class="project-icon" style="background-image: url('/icons/discordtextgenerator.png');"></div>
+                        <div class="project-text">
+                            <h3 class="project-title">Discord Text Generator</h3>
+                            <p class="project-description">Convert text to Discord's Regional Text Indicator characters, and split large messages.</p>
+                        </div>
+                    </a>
+                    <a class="project-source" href="https://github.com/samleatherdale//discordtextgenerator" target="_blank">
+                        <div class="vtable">
+                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+                    <div class="project">
+                <div class="project-content clearfix">
+                    <a class="project-main inherit-link clearfix" href="/erppymobile">
+                        <div class="project-icon" style="background-image: url('/icons/erppymobile.png');"></div>
+                        <div class="project-text">
+                            <h3 class="project-title">Erppy Mobile</h3>
+                            <p class="project-description">A mobile friendly adaptation of Barry Martin's Hopalong Orbits Visualizer.</p>
+                        </div>
+                    </a>
+                    <a class="project-source" href="https://github.com/samleatherdale//erppymobile" target="_blank">
+                        <div class="vtable">
+                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+                </div>
+    </main>
+    
+    <footer class="footer">
+    <div class="container text-muted">
+        <p>&copy; 2017 Sam Leatherdale</p>
+        <div class="social-icons">
+            <a href="https://github.com/SamLeatherdale"><img class="social-image" src="/icons/github-dreamstale.png"></a>
+            <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile"><img class="social-image" src="/icons/stackoverflow-dreamstale.png"></a>
+            <a href="https://www.facebook.com/SamLeatherdaleDev"><img class="social-image" src="/icons/facebook-dreamstale.png"></a>
+            <a href="https://twitter.com/Sam_Leatherdale"><img class="social-image" src="/icons/twitter-dreamstale.png"></a>
+        </div>
+    </div>
+</footer></body>
 </html>
