--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 03/09/2017 11:14:47AM +02:00 CEST-->
+    <!--Compiled on 03/09/2017 11:16:52AM +02:00 CEST-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>Sam Leatherdale</title>
@@ -22,7 +22,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="//css/style.css?v=1504430087.5741" /><body>
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1504430212.9436" /><body>
     <header id="page_header">
     <div class="header-title">
         <a class="inherit-link" href="/"><h1 id="title">Sam Leatherdale</h1></a>
