--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 03/09/2017 11:16:52AM +02:00 CEST-->
+    <!--Compiled on 03/09/2017 11:45:40AM +02:00 CEST-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>Sam Leatherdale</title>
@@ -22,7 +22,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="/css/style.css?v=1504430212.9436" /><body>
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1504431940.781" /><body>
     <header id="page_header">
     <div class="header-title">
         <a class="inherit-link" href="/"><h1 id="title">Sam Leatherdale</h1></a>
@@ -48,7 +48,7 @@
                             <p class="project-description">See the entire history of any YouTube channel without scrolling forever.</p>
                         </div>
                     </a>
-                    <a class="project-source" href="https://github.com/samleatherdale//youtubetimeline" target="_blank">
+                    <a class="project-source" href="https://github.com/samleatherdale/youtubetimeline" target="_blank">
                         <div class="vtable">
                             <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
                         </div>
@@ -64,7 +64,7 @@
                             <p class="project-description">Convert text to Discord's Regional Text Indicator characters, and split large messages.</p>
                         </div>
                     </a>
-                    <a class="project-source" href="https://github.com/samleatherdale//discordtextgenerator" target="_blank">
+                    <a class="project-source" href="https://github.com/samleatherdale/discordtextgenerator" target="_blank">
                         <div class="vtable">
                             <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
                         </div>
@@ -80,7 +80,23 @@
                             <p class="project-description">A mobile friendly adaptation of Barry Martin's Hopalong Orbits Visualizer.</p>
                         </div>
                     </a>
-                    <a class="project-source" href="https://github.com/samleatherdale//erppymobile" target="_blank">
+                    <a class="project-source" href="https://github.com/samleatherdale/erppymobile" target="_blank">
+                        <div class="vtable">
+                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+                    <div class="project">
+                <div class="project-content clearfix">
+                    <a class="project-main inherit-link clearfix" href="/gridgamejs">
+                        <div class="project-icon" style="background-image: url('/icons/gridgame.png');"></div>
+                        <div class="project-text">
+                            <h3 class="project-title">Grid Game</h3>
+                            <p class="project-description">A simple game where the objective is to find a randomly selected tile within a grid.</p>
+                        </div>
+                    </a>
+                    <a class="project-source" href="https://github.com/samleatherdale/gridgamejs" target="_blank">
                         <div class="vtable">
                             <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
                         </div>
