--- a/index.html
+++ b/index.html
@@ -2,18 +2,34 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 03/09/2017 11:45:40AM +02:00 CEST-->
+    <!--Compiled on 04/09/2017 07:57:54AM +02:00 CEST-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>Sam Leatherdale</title>
 
 <!--Iconography-->
-<link rel="shortcut icon" href="/icon/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+<link rel="manifest" href="/icons/manifest.json">
+<link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#4b6dff">
+<link rel="shortcut icon" href="/icons/favicon.ico">
+<meta name="msapplication-config" content="/icons/browserconfig.xml">
+<meta name="theme-color" content="#4b6dff">
 
 <!--Site Verification-->
-
+<meta name="google-site-verification" content="0NgNnS4oEaM3B9gVBRs7b13zsvUWKXs8B-ykVraGxLY" />
 <!--Google Analytics-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-105820957-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <!--Hosted Resources-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
@@ -22,7 +38,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="/css/style.css?v=1504431940.781" /><body>
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1504504674.846" /><body>
     <header id="page_header">
     <div class="header-title">
         <a class="inherit-link" href="/"><h1 id="title">Sam Leatherdale</h1></a>
@@ -38,11 +54,11 @@
     <main>
         <div id="content" class="wrap">
             <h2>GitHub Projects</h2>
-            <p>The following projects are hosted right here on GitHub.</p>
+            <p>The following projects are hosted right here on GitHub Pages.</p>
                     <div class="project">
                 <div class="project-content clearfix">
                     <a class="project-main inherit-link clearfix" href="/youtubetimeline">
-                        <div class="project-icon" style="background-image: url('/icons/youtubetimeline.png');"></div>
+                        <div class="project-icon" style="background-image: url('/icons/projects/youtubetimeline.png');"></div>
                         <div class="project-text">
                             <h3 class="project-title">YouTube Timeline</h3>
                             <p class="project-description">See the entire history of any YouTube channel without scrolling forever.</p>
@@ -58,7 +74,7 @@
                     <div class="project">
                 <div class="project-content clearfix">
                     <a class="project-main inherit-link clearfix" href="/discordtextgenerator">
-                        <div class="project-icon" style="background-image: url('/icons/discordtextgenerator.png');"></div>
+                        <div class="project-icon" style="background-image: url('/icons/projects/discordtextgenerator.png');"></div>
                         <div class="project-text">
                             <h3 class="project-title">Discord Text Generator</h3>
                             <p class="project-description">Convert text to Discord's Regional Text Indicator characters, and split large messages.</p>
@@ -74,7 +90,7 @@
                     <div class="project">
                 <div class="project-content clearfix">
                     <a class="project-main inherit-link clearfix" href="/erppymobile">
-                        <div class="project-icon" style="background-image: url('/icons/erppymobile.png');"></div>
+                        <div class="project-icon" style="background-image: url('/icons/projects/erppymobile.png');"></div>
                         <div class="project-text">
                             <h3 class="project-title">Erppy Mobile</h3>
                             <p class="project-description">A mobile friendly adaptation of Barry Martin's Hopalong Orbits Visualizer.</p>
@@ -90,7 +106,7 @@
                     <div class="project">
                 <div class="project-content clearfix">
                     <a class="project-main inherit-link clearfix" href="/gridgamejs">
-                        <div class="project-icon" style="background-image: url('/icons/gridgame.png');"></div>
+                        <div class="project-icon" style="background-image: url('/icons/projects/gridgame.png');"></div>
                         <div class="project-text">
                             <h3 class="project-title">Grid Game</h3>
                             <p class="project-description">A simple game where the objective is to find a randomly selected tile within a grid.</p>
@@ -110,10 +126,10 @@
     <div class="container text-muted">
         <p>&copy; 2017 Sam Leatherdale</p>
         <div class="social-icons">
-            <a href="https://github.com/SamLeatherdale"><img class="social-image" src="/icons/github-dreamstale.png"></a>
-            <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile"><img class="social-image" src="/icons/stackoverflow-dreamstale.png"></a>
-            <a href="https://www.facebook.com/SamLeatherdaleDev"><img class="social-image" src="/icons/facebook-dreamstale.png"></a>
-            <a href="https://twitter.com/Sam_Leatherdale"><img class="social-image" src="/icons/twitter-dreamstale.png"></a>
+            <a href="https://github.com/SamLeatherdale"><img class="social-image" src="/icons/social/github-dreamstale.png"></a>
+            <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile"><img class="social-image" src="/icons/social/stackoverflow-dreamstale.png"></a>
+            <a href="https://www.facebook.com/SamLeatherdaleDev"><img class="social-image" src="/icons/social/facebook-dreamstale.png"></a>
+            <a href="https://twitter.com/Sam_Leatherdale"><img class="social-image" src="/icons/social/twitter-dreamstale.png"></a>
         </div>
     </div>
 </footer></body>
