Mobile responsive updates
Added new project + mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 04/09/2017 07:57:54AM +02:00 CEST-->
+    <!--Compiled on 18/09/2017 02:13:41PM +10:00 AEST-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>Sam Leatherdale</title>
@@ -32,13 +32,12 @@
 </script>
 <!--Hosted Resources-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" />
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="/css/style.css?v=1504504674.846" /><body>
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1505708021.7827" />
+<body>
     <header id="page_header">
     <div class="header-title">
         <a class="inherit-link" href="/"><h1 id="title">Sam Leatherdale</h1></a>
@@ -50,87 +49,142 @@
         <li role="presentation" class="active"><a class="inherit-link" href="/index.html">Home</a></li><li role="presentation" class=""><a class="inherit-link" href="/about.html">About Me</a></li>        </ul>
     </nav>
 </header>
-    
+
     <main>
         <div id="content" class="wrap">
             <h2>GitHub Projects</h2>
             <p>The following projects are hosted right here on GitHub Pages.</p>
                     <div class="project">
-                <div class="project-content clearfix">
-                    <a class="project-main inherit-link clearfix" href="/youtubetimeline">
-                        <div class="project-icon" style="background-image: url('/icons/projects/youtubetimeline.png');"></div>
-                        <div class="project-text">
-                            <h3 class="project-title">YouTube Timeline</h3>
-                            <p class="project-description">See the entire history of any YouTube channel without scrolling forever.</p>
-                        </div>
+                <div class="project-main">
+                    <div class="project-icon-column">
+                        <a class="project-icon" href="https://samleatherdale.github.io/ultramotherload" style="background-image: url('/icons/projects/ultramotherload.png');"></a>
+                        <a class="project-source-mobile" href="https://github.com/samleatherdale/ultramotherload" target="_blank">
+                            <div class="btn btn-primary">
+                                <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                            </div>
+                        </a>
+                    </div>
+                    <a class="project-text inherit-link" href="https://samleatherdale.github.io/ultramotherload">
+                        <h3 class="project-title">Ultra Motherload</h3>
+                        <p class="project-description">View and modify Super Motherload map files in a simple JavaScript editor.</p>
                     </a>
-                    <a class="project-source" href="https://github.com/samleatherdale/youtubetimeline" target="_blank">
-                        <div class="vtable">
-                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
-                        </div>
-                    </a>
+                </div>
+                <div class="project-source">
+                    <div class="vflex">
+                        <a class="btn btn-primary" href="https://github.com/samleatherdale/ultramotherload" target="_blank">
+                            <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                        </a>
+                    </div>
                 </div>
             </div>
                     <div class="project">
-                <div class="project-content clearfix">
-                    <a class="project-main inherit-link clearfix" href="/discordtextgenerator">
-                        <div class="project-icon" style="background-image: url('/icons/projects/discordtextgenerator.png');"></div>
-                        <div class="project-text">
-                            <h3 class="project-title">Discord Text Generator</h3>
-                            <p class="project-description">Convert text to Discord's Regional Text Indicator characters, and split large messages.</p>
-                        </div>
+                <div class="project-main">
+                    <div class="project-icon-column">
+                        <a class="project-icon" href="https://samleatherdale.github.io/youtubetimeline" style="background-image: url('/icons/projects/youtubetimeline.png');"></a>
+                        <a class="project-source-mobile" href="https://github.com/samleatherdale/youtubetimeline" target="_blank">
+                            <div class="btn btn-primary">
+                                <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                            </div>
+                        </a>
+                    </div>
+                    <a class="project-text inherit-link" href="https://samleatherdale.github.io/youtubetimeline">
+                        <h3 class="project-title">YouTube Timeline<i class="project-responsive fa fa-mobile"></i>
+                    </h3>
+                        <p class="project-description">See the entire history of any YouTube channel without scrolling forever.</p>
                     </a>
-                    <a class="project-source" href="https://github.com/samleatherdale/discordtextgenerator" target="_blank">
-                        <div class="vtable">
-                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
-                        </div>
-                    </a>
+                </div>
+                <div class="project-source">
+                    <div class="vflex">
+                        <a class="btn btn-primary" href="https://github.com/samleatherdale/youtubetimeline" target="_blank">
+                            <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                        </a>
+                    </div>
                 </div>
             </div>
                     <div class="project">
-                <div class="project-content clearfix">
-                    <a class="project-main inherit-link clearfix" href="/erppymobile">
-                        <div class="project-icon" style="background-image: url('/icons/projects/erppymobile.png');"></div>
-                        <div class="project-text">
-                            <h3 class="project-title">Erppy Mobile</h3>
-                            <p class="project-description">A mobile friendly adaptation of Barry Martin's Hopalong Orbits Visualizer.</p>
-                        </div>
+                <div class="project-main">
+                    <div class="project-icon-column">
+                        <a class="project-icon" href="https://samleatherdale.github.io/discordtextgenerator" style="background-image: url('/icons/projects/discordtextgenerator.png');"></a>
+                        <a class="project-source-mobile" href="https://github.com/samleatherdale/discordtextgenerator" target="_blank">
+                            <div class="btn btn-primary">
+                                <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                            </div>
+                        </a>
+                    </div>
+                    <a class="project-text inherit-link" href="https://samleatherdale.github.io/discordtextgenerator">
+                        <h3 class="project-title">Discord Text Generator<i class="project-responsive fa fa-mobile"></i>
+                    </h3>
+                        <p class="project-description">Convert text to Discord's Regional Text Indicator characters, and split large messages.</p>
                     </a>
-                    <a class="project-source" href="https://github.com/samleatherdale/erppymobile" target="_blank">
-                        <div class="vtable">
-                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
-                        </div>
-                    </a>
+                </div>
+                <div class="project-source">
+                    <div class="vflex">
+                        <a class="btn btn-primary" href="https://github.com/samleatherdale/discordtextgenerator" target="_blank">
+                            <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                        </a>
+                    </div>
                 </div>
             </div>
                     <div class="project">
-                <div class="project-content clearfix">
-                    <a class="project-main inherit-link clearfix" href="/gridgamejs">
-                        <div class="project-icon" style="background-image: url('/icons/projects/gridgame.png');"></div>
-                        <div class="project-text">
-                            <h3 class="project-title">Grid Game</h3>
-                            <p class="project-description">A simple game where the objective is to find a randomly selected tile within a grid.</p>
-                        </div>
+                <div class="project-main">
+                    <div class="project-icon-column">
+                        <a class="project-icon" href="https://samleatherdale.github.io/erppymobile" style="background-image: url('/icons/projects/erppymobile.png');"></a>
+                        <a class="project-source-mobile" href="https://github.com/samleatherdale/erppymobile" target="_blank">
+                            <div class="btn btn-primary">
+                                <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                            </div>
+                        </a>
+                    </div>
+                    <a class="project-text inherit-link" href="https://samleatherdale.github.io/erppymobile">
+                        <h3 class="project-title">Erppy Mobile<i class="project-responsive fa fa-mobile"></i>
+                    </h3>
+                        <p class="project-description">A mobile friendly adaptation of Barry Martin's Hopalong Orbits Visualizer.</p>
                     </a>
-                    <a class="project-source" href="https://github.com/samleatherdale/gridgamejs" target="_blank">
-                        <div class="vtable">
-                            <p class="vtable-content"><i class="fa fa-code"></i>View Source</p>
-                        </div>
+                </div>
+                <div class="project-source">
+                    <div class="vflex">
+                        <a class="btn btn-primary" href="https://github.com/samleatherdale/erppymobile" target="_blank">
+                            <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+                    <div class="project">
+                <div class="project-main">
+                    <div class="project-icon-column">
+                        <a class="project-icon" href="https://samleatherdale.github.io/gridgamejs" style="background-image: url('/icons/projects/gridgame.png');"></a>
+                        <a class="project-source-mobile" href="https://github.com/samleatherdale/gridgamejs" target="_blank">
+                            <div class="btn btn-primary">
+                                <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                            </div>
+                        </a>
+                    </div>
+                    <a class="project-text inherit-link" href="https://samleatherdale.github.io/gridgamejs">
+                        <h3 class="project-title">Grid Game</h3>
+                        <p class="project-description">A simple game where the objective is to find a randomly selected tile within a grid.</p>
                     </a>
+                </div>
+                <div class="project-source">
+                    <div class="vflex">
+                        <a class="btn btn-primary" href="https://github.com/samleatherdale/gridgamejs" target="_blank">
+                            <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                        </a>
+                    </div>
                 </div>
             </div>
                 </div>
     </main>
-    
+
     <footer class="footer">
     <div class="container text-muted">
         <p>&copy; 2017 Sam Leatherdale</p>
         <div class="social-icons">
-            <a href="https://github.com/SamLeatherdale"><img class="social-image" src="/icons/social/github-dreamstale.png"></a>
+            <a href="https://github.com/samleatherdale/"><img class="social-image" src="/icons/social/github-dreamstale.png"></a>
             <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile"><img class="social-image" src="/icons/social/stackoverflow-dreamstale.png"></a>
             <a href="https://www.facebook.com/SamLeatherdaleDev"><img class="social-image" src="/icons/social/facebook-dreamstale.png"></a>
             <a href="https://twitter.com/Sam_Leatherdale"><img class="social-image" src="/icons/social/twitter-dreamstale.png"></a>
         </div>
     </div>
-</footer></body>
+</footer>
+</body>
 </html>
