--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 04/09/2017 07:57:54AM +02:00 CEST-->
+    <!--Compiled on 18/09/2017 02:13:41PM +10:00 AEST-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>About Me - Sam Leatherdale</title>
@@ -32,13 +32,12 @@
 </script>
 <!--Hosted Resources-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" rel="stylesheet">
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" />
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="/css/style.css?v=1504504674.8473" /><style>
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1505708021.7844" />
+<style>
 
 </style>
 </head>
@@ -57,7 +56,7 @@
     <main>
         <div id="content" class="wrap">
             <h2>About Me</h2>
-            <p>Hi, I'm Sam Leatherdale. I'm currently studying Computer Science at Western Sydney University, and working as a web developer. I love working on programming and web projects in my spare time, most of which are on my <a href="https://github.com/samleatherdale">GitHub page</a>.
+            <p>Hi, I'm Sam Leatherdale. I'm currently studying Computer Science at Western Sydney University, and working as a web developer. I love working on programming and web projects in my spare time, most of which are on my <a href="https://github.com/samleatherdale/">GitHub page</a>.
             </p>
             <p>In 2015 - 2016, I was a student of the Western Sydney Institute of TAFE NSW, Australia, where I studied the Certificate IV in Programming, the Certificate IV in Web Based Technologies, and the Diploma of Information Technology. During my time at TAFE, I won the Student of the Year award for Information Technology. You can see the promotional video that was made for the awards ceremony here: <a href="https://www.youtube.com/watch?v=BdAlXuwlHoQ" target="_blank">https://www.youtube.com/watch?v=BdAlXuwlHoQ</a>
             </p>
@@ -87,11 +86,12 @@
     <div class="container text-muted">
         <p>&copy; 2017 Sam Leatherdale</p>
         <div class="social-icons">
-            <a href="https://github.com/SamLeatherdale"><img class="social-image" src="/icons/social/github-dreamstale.png"></a>
+            <a href="https://github.com/samleatherdale/"><img class="social-image" src="/icons/social/github-dreamstale.png"></a>
             <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile"><img class="social-image" src="/icons/social/stackoverflow-dreamstale.png"></a>
             <a href="https://www.facebook.com/SamLeatherdaleDev"><img class="social-image" src="/icons/social/facebook-dreamstale.png"></a>
             <a href="https://twitter.com/Sam_Leatherdale"><img class="social-image" src="/icons/social/twitter-dreamstale.png"></a>
         </div>
     </div>
-</footer></body>
+</footer>
+</body>
 </html>
