Added Sydney Trains link, updated footer

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page-about">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 18/09/2017 02:13:41PM +10:00 AEST-->
+    <!--Compiled on 24/12/2018 06:04:09PM +11:00 AEDT-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>About Me - Sam Leatherdale</title>
@@ -36,7 +36,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" />
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="/css/style.css?v=1505708021.7844" />
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1545635049.4498" />
 <style>
 
 </style>
@@ -55,42 +55,59 @@
 </header>
     <main>
         <div id="content" class="wrap">
-            <h2>About Me</h2>
-            <p>Hi, I'm Sam Leatherdale. I'm currently studying Computer Science at Western Sydney University, and working as a web developer. I love working on programming and web projects in my spare time, most of which are on my <a href="https://github.com/samleatherdale/">GitHub page</a>.
-            </p>
-            <p>In 2015 - 2016, I was a student of the Western Sydney Institute of TAFE NSW, Australia, where I studied the Certificate IV in Programming, the Certificate IV in Web Based Technologies, and the Diploma of Information Technology. During my time at TAFE, I won the Student of the Year award for Information Technology. You can see the promotional video that was made for the awards ceremony here: <a href="https://www.youtube.com/watch?v=BdAlXuwlHoQ" target="_blank">https://www.youtube.com/watch?v=BdAlXuwlHoQ</a>
-            </p>
+            <section>
+                <h2>About Me</h2>
+                <p>Hi, I'm Sam Leatherdale. I'm currently studying Computer Science at Western Sydney University, and working as a web developer. I love working on programming and web projects in my spare time, most of which are on my <a href="https://github.com/samleatherdale/">GitHub page</a>.
+                </p>
+                <p>In 2015 - 2016, I was a student of the Western Sydney Institute of TAFE NSW, Australia, where I studied the Certificate IV in Programming, the Certificate IV in Web Based Technologies, and the Diploma of Information Technology. During my time at TAFE, I won the Student of the Year award for Information Technology. You can see the promo video created for the event below:
+                </p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BdAlXuwlHoQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
 
-            <p>I mainly use the languages listed below:</p>
-            <h4>Web</h4>
-            <ul>
-                <li>HTML/CSS (including SASS/SCSS)</li>
-                <li>JavaScript (including jQuery and TypeScript)</li>
-                <li>PHP</li>
-                <li>MySQL/MariaDB</li>
-            </ul>
-            <h4>Desktop</h4>
-            <ul>
-                <li>C#.NET</li>
-                <li>Python</li>
-            </ul>
-            <p>I am also familiar with Java and Visual Basic, but currently do not use them in any active projects.</p>
-            
-            <h3>Achievements</h3>
-            <p>In October 2016, I won the WorldSkills National competition for Web Development. It was a tough 3 day competition and skills including original webpage design, client-side scripting, server-side programming, database creation and interaction, and Photoshop/Illustrator design were tested.</p>
+            <section>
+                <p>I mainly use the languages listed below:</p>
+                <h4>Web</h4>
+                <ul>
+                    <li>HTML/CSS (including SASS/SCSS)</li>
+                    <li>JavaScript (including React, TypeScript and jQuery)</li>
+                    <li>PHP (including CodeIgniter framework)</li>
+                    <li>MySQL/MariaDB</li>
+                </ul>
+                <h4>Desktop</h4>
+                <ul>
+                    <li>C#.NET</li>
+                    <li>Python</li>
+                </ul>
+                <p>I am also familiar with Java and Visual Basic, but currently do not use them in any active projects.</p>
+            </section>
 
-            <p>I also attended the National Computer Science School at the University of Sydney in January 2016.</p>
+            <section>
+                <h2>Achievements</h2>
+                <p>In October 2016, I won the WorldSkills National competition for Web Development. It was a tough 3 day competition and skills including original webpage design, client-side scripting, server-side programming, database creation and interaction, and Photoshop/Illustrator design were tested.</p>
+
+                <p>I also attended the National Computer Science School at the University of Sydney in January 2016.</p>
+            </section>
+
+            <section>
+                <h2>Contact</h2>
+                <p>If you wish to get in contact with me, please do so by using my <a href="https://www.linkedin.com/in/samleatherdale/" target="_blank">LinkedIn</a> profile.</p>
+            </section>
         </div>
     </main>
     <footer class="footer">
     <div class="container text-muted">
-        <p>&copy; 2017 Sam Leatherdale</p>
+        <p>&copy; 2018 Sam Leatherdale</p>
         <div class="social-icons">
-            <a href="https://github.com/samleatherdale/"><img class="social-image" src="/icons/social/github-dreamstale.png"></a>
-            <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile"><img class="social-image" src="/icons/social/stackoverflow-dreamstale.png"></a>
-            <a href="https://www.facebook.com/SamLeatherdaleDev"><img class="social-image" src="/icons/social/facebook-dreamstale.png"></a>
-            <a href="https://twitter.com/Sam_Leatherdale"><img class="social-image" src="/icons/social/twitter-dreamstale.png"></a>
-        </div>
+            <a href="https://www.linkedin.com/in/samleatherdale/" target="_blank">
+                <img class="social-image" src="/icons/social/linkedin-dreamstale.png">
+            </a>
+            <a href="https://github.com/samleatherdale/" target="_blank">
+                <img class="social-image" src="/icons/social/github-dreamstale.png">
+            </a>
+            <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile" target="_blank">
+                <img class="social-image" src="/icons/social/stackoverflow-dreamstale.png">
+            </a>
+                </div>
     </div>
 </footer>
 </body>
