--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page-index">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 18/09/2017 02:13:41PM +10:00 AEST-->
+    <!--Compiled on 24/12/2018 06:04:09PM +11:00 AEDT-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>Sam Leatherdale</title>
@@ -36,7 +36,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" />
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="/css/style.css?v=1505708021.7827" />
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1545635049.4381" />
 <body>
     <header id="page_header">
     <div class="header-title">
@@ -54,6 +54,30 @@
         <div id="content" class="wrap">
             <h2>GitHub Projects</h2>
             <p>The following projects are hosted right here on GitHub Pages.</p>
+                    <div class="project">
+                <div class="project-main">
+                    <div class="project-icon-column">
+                        <a class="project-icon" href="https://samleatherdale.github.io/sydneytrainscarlookup" style="background-image: url('/icons/projects/sydneytrains.png');"></a>
+                        <a class="project-source-mobile" href="https://github.com/samleatherdale/sydneytrainscarlookup" target="_blank">
+                            <div class="btn btn-primary">
+                                <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                            </div>
+                        </a>
+                    </div>
+                    <a class="project-text inherit-link" href="https://samleatherdale.github.io/sydneytrainscarlookup">
+                        <h3 class="project-title">Sydney Trains Car Lookup<i class="project-responsive fa fa-mobile"></i>
+                    </h3>
+                        <p class="project-description">Search a Sydney Trains carriage number to find out the model and carriage type.</p>
+                    </a>
+                </div>
+                <div class="project-source">
+                    <div class="vflex">
+                        <a class="btn btn-primary" href="https://github.com/samleatherdale/sydneytrainscarlookup" target="_blank">
+                            <i class="fa fa-code"></i><span class="project-source-label">View Source</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
                     <div class="project">
                 <div class="project-main">
                     <div class="project-icon-column">
@@ -177,13 +201,18 @@
 
     <footer class="footer">
     <div class="container text-muted">
-        <p>&copy; 2017 Sam Leatherdale</p>
+        <p>&copy; 2018 Sam Leatherdale</p>
         <div class="social-icons">
-            <a href="https://github.com/samleatherdale/"><img class="social-image" src="/icons/social/github-dreamstale.png"></a>
-            <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile"><img class="social-image" src="/icons/social/stackoverflow-dreamstale.png"></a>
-            <a href="https://www.facebook.com/SamLeatherdaleDev"><img class="social-image" src="/icons/social/facebook-dreamstale.png"></a>
-            <a href="https://twitter.com/Sam_Leatherdale"><img class="social-image" src="/icons/social/twitter-dreamstale.png"></a>
-        </div>
+            <a href="https://www.linkedin.com/in/samleatherdale/" target="_blank">
+                <img class="social-image" src="/icons/social/linkedin-dreamstale.png">
+            </a>
+            <a href="https://github.com/samleatherdale/" target="_blank">
+                <img class="social-image" src="/icons/social/github-dreamstale.png">
+            </a>
+            <a href="http://stackoverflow.com/users/5157460/sam-leatherdale?tab=profile" target="_blank">
+                <img class="social-image" src="/icons/social/stackoverflow-dreamstale.png">
+            </a>
+                </div>
     </div>
 </footer>
 </body>
