Added video resizer script

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" class="page-about">
 <head>
 <meta charset="utf-8">
-    <!--Compiled on 24/12/2018 06:04:09PM +11:00 AEDT-->
+    <!--Compiled on 26/12/2018 12:46:45PM +11:00 AEDT-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="author" content="Sam Leatherdale" />
 <title>About Me - Sam Leatherdale</title>
@@ -36,7 +36,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700" />
 
 <!--Local Resources-->
-<link rel="stylesheet" type="text/css" href="/css/style.css?v=1545635049.4498" />
+<link rel="stylesheet" type="text/css" href="/css/style.css?v=1545788805.386" />
 <style>
 
 </style>
@@ -110,5 +110,6 @@
                 </div>
     </div>
 </footer>
+<script src="/js/index.js?v=1545788805.3866"></script>
 </body>
 </html>
